<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/menuMapa"
            android:icon="@drawable/ic_ubication"
            android:title="@string/menu_ver_mapa" />
        <item
            android:id="@+id/menuConfiguracion"
            android:icon="@drawable/ic_configuration"
            android:title="@string/configuracion"/>
        <item
            android:id="@+id/menuEditarPerfil"
            android:icon="@drawable/ic_about"
            android:title="@string/editarPerfil" />
        <item
            android:id="@+id/menuDevelop"
            android:icon="@drawable/ic_develop"
            android:title="@string/acerca" />
        <item
            android:id="@+id/menuSalir"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_salir" />

</menu>
