<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_acerca_de_drawable">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="24dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/tituloAcercaDe"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/contenidoApp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/contenidoDeveloper"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/dialog_acerca_de_button"
        android:text="@string/aceptar"
        android:textColor="#000000"/>

</LinearLayout>